# DRF_winiversity

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt  settings.py
accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_course_alter_user_total_study_time_enrollment.py
certificates/: admin.py  models.py  serializers.py  urls.py  views.py
certificates/migrations/: 0001_initial.py  0002_certificate_verification_code_and_more.py  0003_auto_20240922_1127.py
config/: settings.py  urls.py
courses/: admin.py  models.py  serializers.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_lesson_prerequisite_courseprogress.py  0003_remove_courseprogress_last_completed_lesson_and_more.py
missions/: admin.py  models.py  serializers.py  urls.py  views.py
missions/migrations/: 0001_initial.py  0002_alter_mission_course.py  0002_alter_multiplechoicemission_options.py  0003_missionsubmission_selected_options.py  0004_alter_mission_correct_answer.py  0005_remove_missionsubmission_is_correct_and_more.py  0006_alter_mission_correct_answer.py  0007_mission_code_template_missionsubmission_is_correct_and_more.py
payments/: models.py  serializers.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_coupon_remove_payment_transaction_id_and_more.py  0002_payment_course.py  0005_merge_20240923_1716.py  (+2 more)
progress/: admin.py  middleware.py  models.py  serializers.py  tests.py  urls.py  views.py
templates/: lesson_detail.html
(+22 files in other folders)
